setting SQL Db connection

--- a/server/appsettings.json
+++ b/server/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.\\SqlExpress; Database=instaNote; Trusted_Connection=true; TrustServiceCertificate=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
