--- a/server/appsettings.json
+++ b/server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.\\SqlExpress; Database=instaNote; Trusted_Connection=true; TrustServiceCertificate=true;"
+    "DefaultConnection": "Server=dbnote.database.windows.net;Database=dbnote;User ID=sqladmin;Password=Chocolate660;Encrypt=True;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
