--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
     "@types/node": "20.1.4",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "@types/react-timeago": "^4.1.3",
     "autoprefixer": "10.4.14",
     "dotenv": "^16.0.3",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "javascript-time-ago": "^2.5.9",
     "next": "13.4.2",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
+    "react-timeago": "^7.1.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   }
